# perl-shared

./: .gitignore  .gitmodules  MANIFEST  Makefile  README.md  docker-compose.unibuild.yml  libperfsonar.spec  unibuild-order
SimpleLookupServiceTests/: BulkRenewMessage.t  HostTest.t  InterfaceTest.t  PSServiceQueryObject.t  PSServiceTest.t  PersonTest.t  QueryObject.t  QueryObjectTest.t  RecordFactoryTest.t  RecordSigningTest.t  RecordTest.t  ServiceQueryObject.t  ServiceTest.t
client/: client.pl  gtkClient.pl  logger.conf  pinger_client.pl  pinger_service_check.pl  ruby_client.rb
client/c_api/libsoap-1.1.0/libcsoap/: Makefile.am  Makefile.in
client/c_api/libsoap-1.1.0/nanohttp/: Makefile.am  Makefile.in  nanohttp-common.c  nanohttp-logging.c  nanohttp-logging.h  nanohttp-socket.c  nanohttp-ssl.h
debian/: README  changelog  control  copyright  gbp.conf  libperfsonar-perl.install  libperfsonar-sls-perl.install  perfsonar-common.postinst  perfsonar-common.postrm  rules
etc/: EchoRequest.xml
geoip/: Makefile  README.md  deb.make  get_dependency.sh  packages.yml  rpm.make
libipc-dirqueue-perl/: Makefile
rpms/: RPM_README.md  Vagrantfile
scripts/: DCNTopologyAgent.pl  cacti2nmwg.pl  clean_pSB_db.pl  create_landmarks.pl  cricket2SONAR.pl  dump.pl  gLS_example.pl  landmarks_example.csv  loadStoreFile.pl  logger.conf  makeDBConfig.pl  makeStore.pl  make_exec.sh  make_noExtras_exec.sh  make_pod.pl  make_ssl_exec.sh  perfsonar-collector.pl  perfsonar-daemon.pl  psConfigureCollectors  psConfigureDaemon  ps_schemaPXB.pl  startup_mod_perl2.pl
spec/: XML-LibXML.spec  (+5 more)
(+1206 files in other folders)
