
noinst_LIBRARIES=libcsoap.a

libcsoap_adir=$(includedir)/libcsoap-@csoap_release@/libcsoap

libcsoap_a_SOURCES=soap-xml.c soap-fault.c soap-env.c soap-service.c    \
                    soap-router.c soap-client.c soap-server.c soap-ctx.c \
                    soap-admin.c

libcsoap_a_HEADERS=soap-xml.h soap-fault.h soap-env.h soap-service.h    \
                    soap-router.h soap-client.h soap-server.h soap-ctx.h \
                    soap-admin.h

libcsoap_a_CFLAGS=-I${top_srcdir}

